# Universe

./: .gitignore  README.md  createMakeAm.py  dataStructures.cpp  dataStructures.h  disease.cpp  disease.h  globals.cpp  globals.h  hivemind.cpp  main.cpp  metaAutomate.sh  metabool.cpp  tile.cpp  tile.h  unit.cpp  unit.h
GenerateBoolTransCode/: main.cpp
TranslateBoolCondition/: boolCond.cpp  boolCond.h  boolList.cpp  boolList.h  boolList2.cpp  boolList2.h  foo.cpp  foo.h  info.cpp  info.h  main.cpp
Universe/: Makefile  Makefile.am  allminds.cpp  allminds.h  allunits.cpp  allunits.h  animal.cpp  animal.h  commProtocol.cpp  commProtocol.h  commWrapper.cpp  commWrapper.h  configure.ac  creature.cpp  creature.h  currLoopVar.cpp  currLoopVar.h  dataStructures.cpp  dataStructures.h  disease.cpp  disease.h  food.cpp  food.h  globals.cpp  globals.h  hivemind.cpp  hivemind.h  main.cpp  map  mathFunction.cpp  mathFunction.h  metabool.cpp  metabool.h  object.cpp  object.h  species.cpp  species.h  throw.cpp  throw.h  tile.cpp  (+4 more)
Universe/Animalia/: animal.cpp  animal.h  animalBehavior.h  animalEatingAbilities.cpp  animalEatingAbilities.h  species.cpp  species.h
Universe/TransBoolExpr/: boolListTile.cpp  boolListTile.h  boolListUnit.cpp  boolListUnit.h  vectorOpOverloads.cpp  vectorOpOverloads.h
UniverseOutput/: main.cpp
