AUTOMAKE_OPTIONS = foreign

CXXFLAGS=-Wall -g3 -O0 -Wextra -Wfloat-equal -Wconversion -std=c++0x
LDFLAGS=

bin_PROGRAMS = Universe
Universe_SOURCES = ./tile.cpp ./currLoopVar.cpp ./metabool.cpp ./Animalia/animalEatingAbilities.cpp ./Animalia/animal.cpp ./Animalia/species.cpp ./TransBoolExpr/boolListTile.cpp ./TransBoolExpr/vectorOpOverloads.cpp ./TransBoolExpr/boolListUnit.cpp ./TransBoolExpr/boolCond.cpp ./food.cpp ./allunits.cpp ./hivemind.cpp ./throw.cpp ./allminds.cpp ./disease.cpp ./main.cpp ./commWrapper.cpp ./commProtocol.cpp ./globals.cpp ./dataStructures.cpp ./object.cpp ./unit.cpp