#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([Universe], [1])
AC_CONFIG_FILES([Makefile])
AM_INIT_AUTOMAKE([Universe], [1])
AC_CONFIG_SRCDIR([tile.cpp])


# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL

# Checks for library functions.
AC_CHECK_FUNCS([pow sqrt])

AC_OUTPUT
PUT
